--- a/app/index.html
+++ b/app/index.html
@@ -15,11 +15,12 @@
 	</head>
 
 	<body>
-		<header>
+		<header class="header">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-3 col-sm-12 header__logo">
-
+						<img src="img/_src/logo.png" alt="">	
+						<button class="btn btn__standart btn-hidden">заказать звонок</button>
 					</div>
 					<div class="col-lg-9 col-sm-12">
 						<div class="header__info">
@@ -30,7 +31,10 @@
 								<span class="header__phone list__item-img">+7 916 123-45-67</span>
 								<span class="header__mail list__item-img">Mail@mail.ru</span>
 							</div>
-							<button class="btn btn__standart header__info-item">заказать звонок</button>
+							<div class="header__info-item">
+								<button class="btn btn__standart">заказать звонок</button>
+							</div>
+							
 						</div>
 						<nav class="main-menu">
 							<div class="menu-mobile">
@@ -40,7 +44,7 @@
 									<span class="menu-mobile__bar-3"></span>
 									<p>Меню</p>
 								</button>
-								<span class="menu-mobile__phone">+7 926 543 27 16</span>
+								<span class="menu-mobile__phone">+7 916 123-45-67</span>
 							</div>
 							<ul id="menu" class="menu">
 								<li class="menu__item">
@@ -50,26 +54,21 @@
 								</li>
 								<li class="menu__item">
 									<a href="aboutUs.html" class="menu__link">
-										<span>о компании</span>
+										<span>ассортимент</span>
 									</a>
 								</li>
 								<li class="menu__item">
 									<a href="service.html" class="menu__link">
-										<span>услуги</span>
+										<span>новости</span>
 									</a>
 								</li>
 								<li class="menu__item">
 									<a href="park.html" class="menu__link">
-										<span>наш парк</span>
+										<span>сертификаты</span>
 									</a>
 								</li>
 								<li class="menu__item">
 									<a href="review.html" class="menu__link">
-										<span>отзывы</span>
-									</a>
-								</li>
-								<li class="menu__item">
-									<a href="contacts.html" class="menu__link">
 										<span>контакты</span>
 									</a>
 								</li>
@@ -79,7 +78,61 @@
 				</div>
 			</div>
 		</header>
-		<main></main>
+		<main>
+			<section class="main-divider">
+				<div class="container">
+					<div class="main-divider__content">
+						<span>На этом месте будет<br> вкусный заголовок</span>	
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima architecto ex placeat consequuntur 
+							laudantium itaque explicabo id nisi at reprehenderit, ab quaerat dolor quibusdam ut?
+						</p>
+						<button class="btn btn__standart">заказать звонок</button>
+					</div>
+				</div>
+			</section>
+			<section class="main-about section-padding">
+				<div class="container">
+					<div class="main-about__wrapper">
+						<div class="row">
+							<div class="col-md-6 main-about__img">
+								<img src="img/_src/main-about.png" alt="">
+							</div>
+							<div class="col-lg-6 col-md-12 main-about__info">
+								<h1 class="big__title">О компании</h1>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+								<p style="margin-bottom: 0;">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt </p>
+								<button class="btn btn__standart main-about__btn">подробнее</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="main-advantages section-padding">
+				<div class="container">
+					<h1 class="big__title section-title">Наши преимущества</h1>
+					<div class="row">
+						<div class="col-lg-3 col-md-6 col-sm-12 main-advantages__item">
+							<div class="main-advantages__dish-wrapper"></div>
+							<span class="main-advantages__title">На этом месте описание преимущества</span>
+						</div>
+						<div class="col-lg-3 col-md-6 col-sm-12 main-advantages__item">
+							<div class="main-advantages__dish-wrapper"></div>
+							<span class="main-advantages__title">На этом месте описание преимущества</span>
+						</div>
+						<div class="col-lg-3 col-md-6 col-sm-12 main-advantages__item">
+							<div class="main-advantages__dish-wrapper"></div>
+							<span class="main-advantages__title">На этом месте описание преимущества</span>
+						</div>
+						<div class="col-lg-3 col-md-6 col-sm-12 main-advantages__item">
+							<div class="main-advantages__dish-wrapper"></div>
+							<span class="main-advantages__title">На этом месте описание преимущества</span>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
 		<footer></footer>
 
 		<script src="js/scripts.min.js"></script>
