--- a/app/index.html
+++ b/app/index.html
@@ -111,29 +111,142 @@
 			</section>
 			<section class="main-advantages section-padding">
 				<div class="container">
-					<h1 class="big__title section-title">Наши преимущества</h1>
+					<h1 class="title__big section-title">Наши преимущества</h1>
 					<div class="row">
 						<div class="col-lg-3 col-md-6 col-sm-12 main-advantages__item">
-							<div class="main-advantages__dish-wrapper"></div>
-							<span class="main-advantages__title">На этом месте описание преимущества</span>
+							<div class="main-advantages__dish-wrapper main-advantages__img-1"></div>
+							<span class="main-advantages__text">На этом месте описание преимущества</span>
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-12 main-advantages__item">
-							<div class="main-advantages__dish-wrapper"></div>
-							<span class="main-advantages__title">На этом месте описание преимущества</span>
+							<div class="main-advantages__dish-wrapper main-advantages__img-2"></div>
+							<span class="main-advantages__text">На этом месте описание преимущества</span>
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-12 main-advantages__item">
-							<div class="main-advantages__dish-wrapper"></div>
-							<span class="main-advantages__title">На этом месте описание преимущества</span>
+							<div class="main-advantages__dish-wrapper main-advantages__img-3"></div>
+							<span class="main-advantages__text">На этом месте описание преимущества</span>
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-12 main-advantages__item">
-							<div class="main-advantages__dish-wrapper"></div>
-							<span class="main-advantages__title">На этом месте описание преимущества</span>
+							<div class="main-advantages__dish-wrapper main-advantages__img-4"></div>
+							<span class="main-advantages__text">На этом месте описание преимущества</span>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="main-categories section-padding">
+				<div class="container">
+					<h1 class="title__big section-title">Категории</h1>
+					<div class="grid">
+						<div class="grid__item main-categories__item">
+							<h4 class="main-categories__title">Вареные колбасы и ветчины</h4>
+							<img src="img/_src/categories-1.png" alt="">
+						</div>
+						<div class="grid__item main-categories__item">
+							<h4 class="main-categories__title">Сосиски и сардельки</h4>
+							<img src="img/_src/categories-2.png" alt="">
+						</div>
+						<div class="grid__item main-categories__item">
+							<h4 class="main-categories__title">Варено-копченые и полукопченые колбасы</h4>
+							<img src="img/_src/categories-3.png" alt="">
+						</div>
+						<div class="grid__item main-categories__item">
+							<h4 class="main-categories__title">Сырокопченые и сыровяленые колбасы</h4>
+							<img src="img/_src/categories-4.png" alt="">
+						</div>
+						<div class="grid__item main-categories__item">
+							<h4 class="main-categories__title">Заливные, ливер, субпродукты</h4>
+							<img src="img/_src/categories-5.png" alt="">
+						</div>
+						<div class="grid__item main-categories__item">
+							<h4 class="main-categories__title">Деликатесы и копчености</h4>
+							<img src="img/_src/categories-6.png" alt="">
+						</div>
+						<div class="grid__item main-categories__item">
+							<h4 class="main-categories__title">Шашлык</h4>
+							<img src="img/_src/categories-7.png" alt="">
+						</div>
+						<div class="grid__item main-categories__item">
+							<h4 class="main-categories__title">Консервы</h4>
+							<img src="img/_src/categories-8.png" alt="">
+						</div>
+						<div class="grid__item main-categories__item">
+							<h4 class="main-categories__title">Полуфабрикаты замороженные</h4>
+							<img src="img/_src/categories-9.png" alt="">
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="main-articles">
+				<div class="container">
+					<div class="articles__title">
+						<h1 class="title__big">Статьи</h1>
+						<button class="btn btn__standart">все статьи</button>
+					</div>
+					<div class="row articles__cards">
+						<div class="col-lg-4 col-sm-12">
+							<div class="card articles__card">
+								<div class="card__img">
+									<img src="img/_src/categories-5.png" alt="">
+								</div>
+								<div class="card__info">
+									<h3 class="articles__header">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+									<span class="articles__date">21.05.2019</span>
+									<p class="articles__text">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
+										Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
+									</p>
+									<button class="btn btn__standart">подробнее</button>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-sm-12">
+							<div class="card articles__card">
+								<div class="card__img">
+									<img src="img/_src/categories-5.png" alt="">
+								</div>
+								<div class="card__info">
+									<h3 class="articles__header">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+									<span class="articles__date">21.05.2019</span>
+									<p class="articles__text">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
+										Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
+									</p>
+									<button class="btn btn__standart">подробнее</button>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-sm-12">
+							<div class="card articles__card">
+								<div class="card__img">
+									<img src="img/_src/categories-5.png" alt="">
+								</div>
+								<div class="card__info">
+									<h3 class="articles__header">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+									<span class="articles__date">21.05.2019</span>
+									<p class="articles__text">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
+										Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
+									</p>
+									<button class="btn btn__standart">подробнее</button>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
 			</section>
 		</main>
-		<footer></footer>
+		<footer class="footer">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-3 col-md-6">
+						<img src="img/_src/logo.png" alt="">
+					</div>
+					<div class="col-lg-1"></div>
+					<div class="col-lg-3"></div>
+					<div class="col-lg-3"></div>
+					<div class="col-lg-2q"></div>
+				</div>
+			</div>
+		</footer>
 
 		<script src="js/scripts.min.js"></script>
 	</body>
