--- a/app/index.html
+++ b/app/index.html
@@ -237,13 +237,28 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-3 col-md-6">
+					<div class="col-lg-2 col-md-6 footer__img footer__item">
 						<img src="img/_src/logo.png" alt="">
 					</div>
-					<div class="col-lg-1"></div>
-					<div class="col-lg-3"></div>
-					<div class="col-lg-3"></div>
-					<div class="col-lg-2q"></div>
+					<div class="col-lg-2 footer__menu footer__item">
+						<ul class="footer__ul">
+							<li><a href="">Главная</a></li>
+							<li><a href="">Новости</a></li>
+							<li><a href="">Контакты</a></li>
+							<li><a href="">Сертификаты</a></li>
+						</ul>
+					</div>
+					<div class="col-lg-3 footer__item">
+						<ul class="footer__ul">
+							<li>Вареные колбасы и ветчины</li>
+							<li>Сосиски с сардельки</li>
+							<li>Варено-копченые и полукапченые колбасы</li>
+							<li>Сырокопченые и сыровяленые колбаски</li>
+							<li>Заливные, ливер, субпродукты</li>
+						</ul>
+					</div>
+					<div class="col-lg-3 footer__item"></div>
+					<div class="col-lg-2 footer__item"></div>
 				</div>
 			</div>
 		</footer>
