--- a/app/index.html
+++ b/app/index.html
@@ -79,9 +79,9 @@
 			</div>
 		</header>
 		<main>
-			<section class="main-divider">
+			<section class="main-divider divider">
 				<div class="container">
-					<div class="main-divider__content">
+					<div class="main-divider__content divider__content">
 						<span>На этом месте будет<br> вкусный заголовок</span>	
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima architecto ex placeat consequuntur 
@@ -181,17 +181,16 @@
 						<h1 class="title__big">Статьи</h1>
 						<button class="btn btn__standart">все статьи</button>
 					</div>
-					<div class="row articles__cards">
-						<div class="col-lg-4 col-sm-12">
-									<div class="card articles__card">
+					<div class="articles-cards grid">
+						<div class="card articles-card">
 										<div class="card__img">
 											<a href="product.html"><img src="img/_src/article-1.jpg" alt=""></a>
 										</div>
 										<div class="card__info">
 											<a href="product.html">
-												<h3 class="articles__header">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-												<span class="articles__date">21.05.2019</span>
-												<p class="articles__text">
+												<h3 class="articles-card__header">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+												<span class="articles-card__date">21.05.2019</span>
+												<p class="articles-card__text">
 													Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
 													Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
 												</p>
@@ -199,41 +198,36 @@
 											</a>
 										</div>
 									</div>
+						<div class="card articles-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/article-1.jpg" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="articles-card__header">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+									<span class="articles-card__date">21.05.2019</span>
+									<p class="articles-card__text">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
+										Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
+									</p>
+									<button class="btn btn__standart">подробнее</button>
+								</a>
+							</div>
 						</div>
-						<div class="col-lg-4 col-sm-12">
-								<div class="card articles__card">
-									<div class="card__img">
-										<a href="product.html"><img src="img/_src/article-1.jpg" alt=""></a>
-									</div>
-									<div class="card__info">
-										<a href="product.html">
-											<h3 class="articles__header">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-											<span class="articles__date">21.05.2019</span>
-											<p class="articles__text">
-												Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
-												Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
-											</p>
-											<button class="btn btn__standart">подробнее</button>
-										</a>
-									</div>
-								</div>
-						</div>
-						<div class="col-lg-4 col-sm-12">
-							<div class="card articles__card">
-								<div class="card__img">
-									<a href="product.html"><img src="img/_src/article-1.jpg" alt=""></a>
-								</div>
-								<div class="card__info">
-									<a href="product.html">
-										<h3 class="articles__header">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-										<span class="articles__date">21.05.2019</span>
-										<p class="articles__text">
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
-											Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
-										</p>
-										<button class="btn btn__standart">подробнее</button>
-									</a>
-								</div>
+						<div class="card articles-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/article-1.jpg" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="articles-card__header">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+									<span class="articles-card__date">21.05.2019</span>
+									<p class="articles-card__text">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
+										Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
+									</p>
+									<button class="btn btn__standart">подробнее</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -271,9 +265,9 @@
 							<li><a href="">Полуфабрикаты замороженные</a></li>
 						</ul>
 					</div>
-					<div class="col-xl-3 col-lg-12 col-sm-6 footer__item">
+					<div class="col-xl-auto col-lg-12 col-sm-6 footer__item">
 						<ul class="footer__ul">
-							<li class="header__address list__item-img footer__item-list">г. Москва, ул. Петровская, д. 135 корпус 13.</li>
+							<li class="header__address list__item-img footer__item-list">г. Москва, ул. Петровская, д. 135<br> корпус 13.</li>
 							<li class="header__phone list__item-img footer__item-list">+7 916 123-45-67</li>
 							<li class="header__mail list__item-img footer__item-list">Mail@mail.ru</li>
 						</ul>
