--- a/app/product.html
+++ b/app/product.html
@@ -15,6 +15,7 @@
 	</head>
 
 	<body>
+
 		<header class="header">
 			<div class="container">
 				<div class="row">
@@ -79,77 +80,250 @@
 			</div>
 		</header>
 		<main>
-			<section class="main-divider">
+			<section class="product-divider divider">
 				<div class="container">
-					<div class="main-divider__content">
-						<span>На этом месте будет<br> вкусный заголовок</span>	
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima architecto ex placeat consequuntur 
-							laudantium itaque explicabo id nisi at reprehenderit, ab quaerat dolor quibusdam ut?
-						</p>
-						<button class="btn btn__standart">заказать звонок</button>
+					<div class="breadcrumbs">
+						<a href="index.html" class="breadcrumbs__main">Главная</a>
+						<a class="breadcrumbs__title">Каталог</a>
+						<a class="breadcrumbs__title">Название товара</a>
+					</div>
+					<div class="product-divider__content divider__content">
+						<img src="img/_src/product-main.png" alt="">
+
+					</div>
+					<button class="btn btn__white product-divider__btn">Вернуться назад</button>
+				</div>
+			</section>
+			<section class="product-describe section-padding">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-5 col-md-12">
+							<div class="row">
+								<div class="col-lg-12 col-md-6" style="padding-bottom: 45px">
+									<div class="card product-describe__card product-describe__comp">
+										<h2 class="title__big product-describe__title">Состав</h2>
+										<p class="product-describe__text">
+											Свинина, говядина, вода, меланж яичный, соль нитритная, молоко сухое
+											обезжиренное, мускатный орех, черный перец, сахар.
+										</p>
+									</div>
+								</div>
+								<div class="col-lg-12 col-md-6">
+									<div class="card product-describe__card product-describe__comp">
+										<h2 class="title__big product-describe__title">Пищевая ценность</h2>
+										<table>
+											<tr>
+												<th>на 100г продукта</th>
+												<th>% от нормы (м/ж)</th>
+											</tr>
+											<tr>
+												<td>Белки - не менее 12г</td>
+												<td>10%/13%</td>
+											</tr>
+											<tr>
+												<td>Жиры - не более 20г</td>
+												<td>33%/38%</td>
+											</tr>
+											<tr>
+												<td>196кКал/814кДж</td>
+												<td>8%/11%</td>
+											</tr>
+										</table>
+										<span class="product-describe__notification">*Основано на диете в 2000 калорий/день</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-7 col-md-12">
+							<h2 class="title__big product-describe__title">Рулька Питерская копчено-вареная</h2>
+							<p class="product-describe__text">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+								Beatae cumque cupiditate expedita inventore itaque nam natus nulla obcaecati odit quia sed, similique
+								temporibus ullam ut?
+							</p>
+							<p class="product-describe__text">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquid debitis, doloribus ducimus itaque
+								natus odio optio placeat quidem repellendus sed sequi vero vitae voluptates?
+							</p>
+							<p class="product-describe__text">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore eum facilis fugit harum magni natus officiis
+								possimus tempora. Ab aliquam consectetur doloribus ducimus eum illum impedit iusto magnam minus obcaecati
+								perferendis quas qui quo quos sapiente similique tempora, tenetur velit. Beatae consequatur doloribus nam
+								quibusdam, sed veritatis voluptates voluptatum. Quasi?
+							</p>
+							<p class="product-describe__text">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. At facere ipsam laboriosam obcaecati officia tempore?
+							</p>
+							<div class="product-describe__sertificat list__item-img">
+								<span>Сертификат соответствия</span>
+								<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam debitis, quaerat.</span>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
-			<section class="main-articles">
+			<section class="product-another section-padding">
 				<div class="container">
-					<div class="articles__title">
-						<h1 class="title__big">Статьи</h1>
-						<button class="btn btn__standart">все статьи</button>
-					</div>
-					<div class="row articles__cards">
-						<div class="col-lg-4 col-sm-12">
-									<div class="card articles__card">
-										<div class="card__img">
-											<a href="product.html"><img src="img/_src/article-1.jpg" alt=""></a>
-										</div>
-										<div class="card__info">
-											<a href="product.html">
-												<h3 class="articles__header">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-												<span class="articles__date">21.05.2019</span>
-												<p class="articles__text">
-													Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
-													Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
-												</p>
-												<button class="btn btn__standart">подробнее</button>
-											</a>
-										</div>
-									</div>
+					<h1 class="title__big section-title">Похожие продукты</h1>
+					<div class="product-cards grid">
+						<div class="card product-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/bread.png" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="product-card__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+								</a>
+							</div>
 						</div>
-						<div class="col-lg-4 col-sm-12">
-								<div class="card articles__card">
-									<div class="card__img">
-										<a href="product.html"><img src="img/_src/article-1.jpg" alt=""></a>
-									</div>
-									<div class="card__info">
-										<a href="product.html">
-											<h3 class="articles__header">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-											<span class="articles__date">21.05.2019</span>
-											<p class="articles__text">
-												Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
-												Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
-											</p>
-											<button class="btn btn__standart">подробнее</button>
-										</a>
-									</div>
-								</div>
+						<div class="card product-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/bread.png" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="product-card__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+								</a>
+							</div>
 						</div>
-						<div class="col-lg-4 col-sm-12">
-							<div class="card articles__card">
-								<div class="card__img">
-									<a href="product.html"><img src="img/_src/article-1.jpg" alt=""></a>
-								</div>
-								<div class="card__info">
-									<a href="product.html">
-										<h3 class="articles__header">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-										<span class="articles__date">21.05.2019</span>
-										<p class="articles__text">
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
-											Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
-										</p>
-										<button class="btn btn__standart">подробнее</button>
-									</a>
-								</div>
+						<div class="card product-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/bread.png" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="product-card__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+								</a>
+							</div>
+						</div>
+						<div class="card product-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/bread.png" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="product-card__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+								</a>
+							</div>
+						</div>
+						<div class="card product-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/bread.png" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="product-card__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+								</a>
+							</div>
+						</div>
+						<div class="card product-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/bread.png" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="product-card__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+								</a>
+							</div>
+						</div>
+						<div class="card product-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/bread.png" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="product-card__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+								</a>
+							</div>
+						</div>
+						<div class="card product-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/bread.png" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="product-card__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+								</a>
+							</div>
+						</div>
+						<div class="card product-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/bread.png" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="product-card__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+								</a>
+							</div>
+						</div>
+						<div class="card product-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/bread.png" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="product-card__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+								</a>
+							</div>
+						</div>
+						<div class="card product-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/bread.png" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="product-card__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+								</a>
+							</div>
+						</div>
+						<div class="card product-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/bread.png" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="product-card__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+								</a>
+							</div>
+						</div>
+						<div class="card product-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/bread.png" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="product-card__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+								</a>
+							</div>
+						</div>
+						<div class="card product-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/bread.png" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="product-card__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+								</a>
+							</div>
+						</div>
+						<div class="card product-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/bread.png" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="product-card__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+								</a>
+							</div>
+						</div>
+						<div class="card product-card">
+							<div class="card__img">
+								<a href="product.html"><img src="img/_src/bread.png" alt=""></a>
+							</div>
+							<div class="card__info">
+								<a href="product.html">
+									<h3 class="product-card__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -187,9 +361,9 @@
 							<li><a href="">Полуфабрикаты замороженные</a></li>
 						</ul>
 					</div>
-					<div class="col-xl-3 col-lg-12 col-sm-6 footer__item">
+					<div class="col-xl-auto col-lg-12 col-sm-6 footer__item">
 						<ul class="footer__ul">
-							<li class="header__address list__item-img footer__item-list">г. Москва, ул. Петровская, д. 135 корпус 13.</li>
+							<li class="header__address list__item-img footer__item-list">г. Москва, ул. Петровская, д. 135<br> корпус 13.</li>
 							<li class="header__phone list__item-img footer__item-list">+7 916 123-45-67</li>
 							<li class="header__mail list__item-img footer__item-list">Mail@mail.ru</li>
 						</ul>
