--- a/app/contacts.html
+++ b/app/contacts.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-lg-3 col-sm-12 header__logo">
                 <img src="img/_src/logo.png" alt="">
-                <button class="btn btn__standart btn-hidden">заказать звонок</button>
+                <button class="btn btn__standart btn-hidden" data-toggle="modal" data-target="#modal">заказать звонок</button>
             </div>
             <div class="col-lg-9 col-sm-12">
                 <div class="header__info">
@@ -33,7 +33,7 @@
                         <span class="header__mail list__item-img">Mail@mail.ru</span>
                     </div>
                     <div class="header__info-item">
-                        <button class="btn btn__standart">заказать звонок</button>
+                        <button class="btn btn__standart" data-toggle="modal" data-target="#modal">заказать звонок</button>
                     </div>
 
                 </div>
@@ -86,10 +86,10 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="contacts__info">
-                        <div class="header__info-item">
+                        <div class="contacts__info-item">
                             <span class="header__address list__item-img">г. Москва, ул. Петровская, д. 135<br> корпус 13.</span>
                         </div>
-                        <div class="header__info-item">
+                        <div class="contacts__info-item">
                             <span class="header__phone list__item-img">+7 916 123-45-67</span>
                             <span class="header__mail list__item-img">Mail@mail.ru</span>
                         </div>
@@ -115,7 +115,7 @@
             <form action="">
                 <div class="row">
                     <div class="col-lg-4">
-                        <div class="div form__usr">
+                        <div class="form__usr">
                             <label class="form__label">
                                 <input type="text" placeholder="Имя">
                             </label>
@@ -128,7 +128,20 @@
                         </div>
                     </div>
                     <div class="col-lg-8">
-
+                        <label class="form__label form__label-textarea">
+                            <textarea name="" id="" cols="30" rows="10" placeholder="Сообщение"></textarea>
+                        </label>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <button class="btn btn__standart form__submit" type="submit">Отправить</button>
+                            </div>
+                            <div class="col-lg-8">
+                                <p class="form__disclaimer">Нажимая "Отправить" вы даете согласие на обработку персональных данных и соглашаетесь с 
+                                    <a href="">пользовательским соглашением и политикой конфиденциальности.</a></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </form>
@@ -177,6 +190,24 @@
     </div>
 </footer>
 
+<!-- Modal -->
+<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle">Обратный звонок</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+          </div>
+        </div>
+      </div>
+
 <script src="js/scripts.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
