--- a/app/index.html
+++ b/app/index.html
@@ -182,7 +182,7 @@
 				<div class="container">
 					<div class="articles__title">
 						<h1 class="title__big">Статьи</h1>
-						<button class="btn btn__standart">все статьи</button>
+						<button class="btn btn__standart to-hidden">все статьи</button>
 					</div>
 					<div class="articles-cards grid">
 						<div class="card articles-card">
@@ -234,6 +234,7 @@
 							</div>
 						</div>
 					</div>
+					<button class="btn btn__standart btn__all-articles to-show">все статьи</button>
 				</div>
 			</section>
 		</main>
