--- a/app/articles.html
+++ b/app/articles.html
@@ -87,10 +87,9 @@
         <div class="container">
             <div class="breadcrumbs">
                 <a href="index.html" class="breadcrumbs__main">Главная</a>
-                <a class="breadcrumbs__title">Каталог</a>
-                <a class="breadcrumbs__title">Название товара</a>
+                <a class="breadcrumbs__title">Новости</a>
             </div>
-                <h1 class="title__big section-title">Статьи</h1>
+                <h1 class="title__big section-title">Новости</h1>
             <div class="articles-cards grid">
                 <div class="card articles-card">
                     <div class="card__img">
@@ -358,7 +357,7 @@
             <div class="col-lg-2 col-sm-6 footer__img footer__item">
                 <img src="img/_src/logo.png" alt="">
             </div>
-            <div class="col-lg-auto col-md-6 footer__menu footer__item hidden">
+            <div class="col-lg-auto col-md-6 footer__menu footer__item to-hidden">
                 <ul class="footer__ul">
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="articles.html">Новости</a></li>
@@ -366,7 +365,7 @@
                     <li><a href="sertificats.html">Сертификаты</a></li>
                 </ul>
             </div>
-            <div class="col-lg-auto col-md-6 footer__item hidden">
+            <div class="col-lg-auto col-md-6 footer__item to-hidden">
                 <ul class="footer__ul">
                     <li><a href="catalog.html">Вареные колбасы и ветчины</a></li>
                     <li><a href="catalog.html">Сосиски с сардельки</a></li>
@@ -375,7 +374,7 @@
                     <li><a href="catalog.html">Заливные, ливер, субпродукты</a></li>
                 </ul>
             </div>
-            <div class="col-lg-auto col-md-6 footer__item hidden">
+            <div class="col-lg-auto col-md-6 footer__item to-hidden">
                 <ul class="footer__ul">
                     <li><a href="catalog.html">Деликатесы и копчености</a></li>
                     <li><a href="catalog.html">Шашлык</a></li>
@@ -424,6 +423,5 @@
 </div>
 
 <script src="js/scripts.min.js"></script>
-<script src="libs/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
