--- a/app/product.html
+++ b/app/product.html
@@ -158,7 +158,7 @@
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit. At facere ipsam laboriosam obcaecati officia tempore?
 							</p>
 							<div class="product-describe__sertificat list__item-img">
-								<a href="">
+								<a href="file.pdf" download="">
 									<span>Сертификат соответствия</span>
 									<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam debitis, quaerat.</span>
 								</a>
@@ -346,7 +346,7 @@
 					<div class="col-lg-2 col-sm-6 footer__img footer__item">
 						<img src="img/_src/logo.png" alt="">
 					</div>
-					<div class="col-lg-auto col-md-6 footer__menu footer__item hidden">
+					<div class="col-lg-auto col-md-6 footer__menu footer__item to-hidden">
 						<ul class="footer__ul">
 							<li><a href="index.html">Главная</a></li>
 							<li><a href="articles.html">Новости</a></li>
@@ -354,7 +354,7 @@
 							<li><a href="sertificats.html">Сертификаты</a></li>
 						</ul>
 					</div>
-					<div class="col-lg-auto col-md-6 footer__item hidden">
+					<div class="col-lg-auto col-md-6 footer__item to-hidden">
 						<ul class="footer__ul">
 							<li><a href="catalog.html">Вареные колбасы и ветчины</a></li>
 							<li><a href="catalog.html">Сосиски с сардельки</a></li>
@@ -363,7 +363,7 @@
 							<li><a href="catalog.html">Заливные, ливер, субпродукты</a></li>
 						</ul>
 					</div>
-					<div class="col-lg-auto col-md-6 footer__item hidden">
+					<div class="col-lg-auto col-md-6 footer__item to-hidden">
 						<ul class="footer__ul">
 							<li><a href="catalog.html">Деликатесы и копчености</a></li>
 							<li><a href="catalog.html">Шашлык</a></li>
@@ -412,6 +412,5 @@
 		</div>
 
 		<script src="js/scripts.min.js"></script>
-		<script src="libs/bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
