--- a/app/sertificats.html
+++ b/app/sertificats.html
@@ -88,74 +88,90 @@
         <div class="container">
             <div class="breadcrumbs">
                 <a href="index.html" class="breadcrumbs__main">Главная</a>
-                <a class="breadcrumbs__title">Сертификаты и документы</a>
+                <a class="breadcrumbs__title">Сертификаты</a>
             </div>
-            <h1 class="title__big section-title">Сертификаты и документы</h1>
+            <h1 class="title__big section-title">Сертификаты</h1>
             <div class="sertificats__search">
                 <input type="text" placeholder="Поиск по документам">
                 <button class="sertificats__search-img btn btn__standart"></button>
             </div>
             <div class="sertificats-cards grid">
                 <div class="card sertificats-card">
-                    <a href="product.html"><img src="img/_src/sertificat.png" alt=""></a>
+                    <a href="file.pdf" download="">
+                        <img src="img/_src/sertificat.png" alt="">
+                    </a>
                     <div class="card__info">
-                        <a href="product.html">
+                        <a href="file.pdf" download="">
                             <h5 class="sertificats-card__title">Наименование документа</h5>
                         </a>
                     </div>
                 </div>
                 <div class="card sertificats-card">
-                    <a href="product.html"><img src="img/_src/sertificat.png" alt=""></a>
+                    <a href="file.pdf" download="">
+                        <img src="img/_src/sertificat.png" alt="">
+                    </a>
                     <div class="card__info">
-                        <a href="product.html">
+                        <a href="file.pdf" download="">
                             <h5 class="sertificats-card__title">Наименование документа</h5>
                         </a>
                     </div>
                 </div>
                 <div class="card sertificats-card">
-                    <a href="product.html"><img src="img/_src/sertificat.png" alt=""></a>
+                    <a href="file.pdf" download="">
+                        <img src="img/_src/sertificat.png" alt="">
+                    </a>
                     <div class="card__info">
-                        <a href="product.html">
+                        <a href="file.pdf" download="">
                             <h5 class="sertificats-card__title">Наименование документа</h5>
                         </a>
                     </div>
                 </div>
                 <div class="card sertificats-card">
-                    <a href="product.html"><img src="img/_src/sertificat.png" alt=""></a>
+                    <a href="file.pdf" download="">
+                        <img src="img/_src/sertificat.png" alt="">
+                    </a>
                     <div class="card__info">
-                        <a href="product.html">
+                        <a href="file.pdf" download="">
                             <h5 class="sertificats-card__title">Наименование документа</h5>
                         </a>
                     </div>
                 </div>
                 <div class="card sertificats-card">
-                    <a href="product.html"><img src="img/_src/sertificat.png" alt=""></a>
+                    <a href="file.pdf" download="">
+                        <img src="img/_src/sertificat.png" alt="">
+                    </a>
                     <div class="card__info">
-                        <a href="product.html">
+                        <a href="file.pdf" download="">
                             <h5 class="sertificats-card__title">Наименование документа</h5>
                         </a>
                     </div>
                 </div>
                 <div class="card sertificats-card">
-                    <a href="product.html"><img src="img/_src/sertificat.png" alt=""></a>
+                    <a href="file.pdf" download="">
+                        <img src="img/_src/sertificat.png" alt="">
+                    </a>
                     <div class="card__info">
-                        <a href="product.html">
+                        <a href="file.pdf" download="">
                             <h5 class="sertificats-card__title">Наименование документа</h5>
                         </a>
                     </div>
                 </div>
                 <div class="card sertificats-card">
-                    <a href="product.html"><img src="img/_src/sertificat.png" alt=""></a>
+                    <a href="file.pdf" download="">
+                        <img src="img/_src/sertificat.png" alt="">
+                    </a>
                     <div class="card__info">
-                        <a href="product.html">
+                        <a href="file.pdf" download="">
                             <h5 class="sertificats-card__title">Наименование документа</h5>
                         </a>
                     </div>
                 </div>
                 <div class="card sertificats-card">
-                    <a href="product.html"><img src="img/_src/sertificat.png" alt=""></a>
+                    <a href="file.pdf" download="">
+                        <img src="img/_src/sertificat.png" alt="">
+                    </a>
                     <div class="card__info">
-                        <a href="product.html">
+                        <a href="file.pdf" download="">
                             <h5 class="sertificats-card__title">Наименование документа</h5>
                         </a>
                     </div>
@@ -175,7 +191,7 @@
             <div class="col-lg-2 col-sm-6 footer__img footer__item">
                 <img src="img/_src/logo.png" alt="">
             </div>
-            <div class="col-lg-auto col-md-6 footer__menu footer__item hidden">
+            <div class="col-lg-auto col-md-6 footer__menu footer__item to-hidden">
                 <ul class="footer__ul">
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="articles.html">Новости</a></li>
@@ -183,7 +199,7 @@
                     <li><a href="sertificats.html">Сертификаты</a></li>
                 </ul>
             </div>
-            <div class="col-lg-auto col-md-6 footer__item hidden">
+            <div class="col-lg-auto col-md-6 footer__item to-hidden">
                 <ul class="footer__ul">
                     <li><a href="catalog.html">Вареные колбасы и ветчины</a></li>
                     <li><a href="catalog.html">Сосиски с сардельки</a></li>
@@ -192,7 +208,7 @@
                     <li><a href="catalog.html">Заливные, ливер, субпродукты</a></li>
                 </ul>
             </div>
-            <div class="col-lg-auto col-md-6 footer__item hidden">
+            <div class="col-lg-auto col-md-6 footer__item to-hidden">
                 <ul class="footer__ul">
                     <li><a href="catalog.html">Деликатесы и копчености</a></li>
                     <li><a href="catalog.html">Шашлык</a></li>
@@ -241,6 +257,5 @@
 </div>
 
 <script src="js/scripts.min.js"></script>
-<script src="libs/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
