--- a/app/index.html
+++ b/app/index.html
@@ -181,7 +181,7 @@
 			<section class="main-articles">
 				<div class="container">
 					<div class="articles__title">
-						<h1 class="title__big">Статьи</h1>
+						<h1 class="title__big">Новости</h1>
 						<button class="btn btn__standart to-hidden">все статьи</button>
 					</div>
 					<div class="articles-cards grid">
@@ -249,7 +249,7 @@
 					<div class="col-lg-2 col-sm-6 footer__img footer__item">
 						<img src="img/_src/logo.png" alt="">
 					</div>
-					<div class="col-lg-auto col-md-6 footer__menu footer__item hidden">
+					<div class="col-lg-auto col-md-6 footer__menu footer__item to-hidden">
 						<ul class="footer__ul">
 							<li><a href="index.html">Главная</a></li>
 							<li><a href="articles.html">Новости</a></li>
@@ -257,7 +257,7 @@
 							<li><a href="sertificats.html">Сертификаты</a></li>
 						</ul>
 					</div>
-					<div class="col-lg-auto col-md-6 footer__item hidden">
+					<div class="col-lg-auto col-md-6 footer__item to-hidden">
 						<ul class="footer__ul">
 							<li><a href="catalog.html">Вареные колбасы и ветчины</a></li>
 							<li><a href="catalog.html">Сосиски с сардельки</a></li>
@@ -266,7 +266,7 @@
 							<li><a href="catalog.html">Заливные, ливер, субпродукты</a></li>
 						</ul>
 					</div>
-					<div class="col-lg-auto col-md-6 footer__item hidden">
+					<div class="col-lg-auto col-md-6 footer__item to-hidden">
 						<ul class="footer__ul">
 							<li><a href="catalog.html">Деликатесы и копчености</a></li>
 							<li><a href="catalog.html">Шашлык</a></li>
@@ -315,6 +315,5 @@
 		</div>
 
 		<script src="js/scripts.min.js"></script>
-		<script src="libs/bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
