--- a/app/textPage.html
+++ b/app/textPage.html
@@ -86,6 +86,11 @@
 <main>
     <section class="about section-padding">
         <div class="container">
+            <div class="breadcrumbs">
+                <a href="index.html" class="breadcrumbs__main">Главная</a>
+                <a class="breadcrumbs__title">Каталог</a>
+                <a class="breadcrumbs__title">Название товара</a>
+            </div>
             <h1 class="section-title title__big">Заголовок 1</h1>
             <div class="about__info">
                 <div class="about-info__left-img">
@@ -152,7 +157,7 @@
             <div class="col-lg-2 col-sm-6 footer__img footer__item">
                 <img src="img/_src/logo.png" alt="">
             </div>
-            <div class="col-lg-auto col-md-6 footer__menu footer__item hidden">
+            <div class="col-lg-auto col-md-6 footer__menu footer__item to-hidden">
                 <ul class="footer__ul">
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="articles.html">Новости</a></li>
@@ -160,7 +165,7 @@
                     <li><a href="sertificats.html">Сертификаты</a></li>
                 </ul>
             </div>
-            <div class="col-lg-auto col-md-6 footer__item hidden">
+            <div class="col-lg-auto col-md-6 footer__item to-hidden">
                 <ul class="footer__ul">
                     <li><a href="catalog.html">Вареные колбасы и ветчины</a></li>
                     <li><a href="catalog.html">Сосиски с сардельки</a></li>
@@ -169,7 +174,7 @@
                     <li><a href="catalog.html">Заливные, ливер, субпродукты</a></li>
                 </ul>
             </div>
-            <div class="col-lg-auto col-md-6 footer__item hidden">
+            <div class="col-lg-auto col-md-6 footer__item to-hidden">
                 <ul class="footer__ul">
                     <li><a href="catalog.html">Деликатесы и копчености</a></li>
                     <li><a href="catalog.html">Шашлык</a></li>
@@ -217,6 +222,5 @@
 </div>
 
 <script src="js/scripts.min.js"></script>
-<script src="libs/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
