--- a/app/vacancy.html
+++ b/app/vacancy.html
@@ -142,7 +142,7 @@
 				<div class="col-lg-2 col-sm-6 footer__img footer__item">
 					<img src="img/_src/logo.png" alt="">
 				</div>
-				<div class="col-lg-auto col-md-6 footer__menu footer__item hidden">
+				<div class="col-lg-auto col-md-6 footer__menu footer__item to-hidden">
 					<ul class="footer__ul">
 						<li><a href="index.html">Главная</a></li>
 						<li><a href="articles.html">Новости</a></li>
@@ -150,7 +150,7 @@
 						<li><a href="sertificats.html">Сертификаты</a></li>
 					</ul>
 				</div>
-				<div class="col-lg-auto col-md-6 footer__item hidden">
+				<div class="col-lg-auto col-md-6 footer__item to-hidden">
 					<ul class="footer__ul">
 						<li><a href="catalog.html">Вареные колбасы и ветчины</a></li>
 						<li><a href="catalog.html">Сосиски с сардельки</a></li>
@@ -159,7 +159,7 @@
 						<li><a href="catalog.html">Заливные, ливер, субпродукты</a></li>
 					</ul>
 				</div>
-				<div class="col-lg-auto col-md-6 footer__item hidden">
+				<div class="col-lg-auto col-md-6 footer__item to-hidden">
 					<ul class="footer__ul">
 						<li><a href="catalog.html">Деликатесы и копчености</a></li>
 						<li><a href="catalog.html">Шашлык</a></li>
@@ -207,7 +207,6 @@
 		</div>
 	</div>
 
-		<script src="js/scripts.min.js"></script>
-	<script src="libs/bootstrap/js/bootstrap.min.js"></script>
+	<script src="js/scripts.min.js"></script>
 	</body>
 </html>
