--- a/app/contacts.html
+++ b/app/contacts.html
@@ -86,6 +86,11 @@
 <main>
     <section class="contacts section-padding">
         <div class="container">
+            <div class="breadcrumbs">
+                <a href="index.html" class="breadcrumbs__main">Главная</a>
+                <a class="breadcrumbs__title">Каталог</a>
+                <a class="breadcrumbs__title">Название товара</a>
+            </div>
             <h1 class="title__big section-title">Контакты</h1>
             <div class="row">
                 <div class="col-lg-4">
@@ -134,9 +139,7 @@
                     </div>
                     <div class="col-lg-8">
                         <div class="form__message">
-                            <label class="form__label form__label-textarea">
-                                <textarea name="" id="" cols="30" rows="10" placeholder="Сообщение"></textarea>
-                            </label>
+                            <textarea class="form__label form__label-textarea" name="" id="" cols="30" rows="10" placeholder="Сообщение"></textarea>
                         </div>
                     </div>
                     <div class="col-lg-12">
@@ -158,16 +161,16 @@
 </main>
 
 <div class="to-top">
-    <img src="img/_src/to-top.png" alt="">
+    <span class="to-top__arrow"></span>
 </div>
 
 <footer class="footer">
     <div class="container">
         <div class="row">
-            <div class="col-lg-2 col-sm-6 footer__img footer__item">
+            <div class="col-lg-2 col-sm-12 footer__img footer__item">
                 <img src="img/_src/logo.png" alt="">
             </div>
-            <div class="col-lg-auto col-md-6 footer__menu footer__item to-hidden">
+            <div class="col-lg-auto col-md-4 d-sm-none d-lg-block footer__menu footer__item to-hidden">
                 <ul class="footer__ul">
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="articles.html">Новости</a></li>
@@ -175,7 +178,7 @@
                     <li><a href="sertificats.html">Сертификаты</a></li>
                 </ul>
             </div>
-            <div class="col-lg-auto col-md-6 footer__item to-hidden">
+            <div class="col-lg-auto col-md-4 d-sm-none d-lg-block footer__item to-hidden">
                 <ul class="footer__ul">
                     <li><a href="catalog.html">Вареные колбасы и ветчины</a></li>
                     <li><a href="catalog.html">Сосиски с сардельки</a></li>
@@ -184,7 +187,7 @@
                     <li><a href="catalog.html">Заливные, ливер, субпродукты</a></li>
                 </ul>
             </div>
-            <div class="col-lg-auto col-md-6 footer__item to-hidden">
+            <div class="col-lg-auto col-md-4 d-sm-none d-lg-block footer__item to-hidden">
                 <ul class="footer__ul">
                     <li><a href="catalog.html">Деликатесы и копчености</a></li>
                     <li><a href="catalog.html">Шашлык</a></li>
@@ -192,7 +195,7 @@
                     <li><a href="catalog.html">Полуфабрикаты замороженные</a></li>
                 </ul>
             </div>
-            <div class="col-xl-auto col-lg-12 col-sm-6 footer__item">
+            <div class="col-xl-auto col-md-12  footer__item">
                 <ul class="footer__ul">
                     <li class="header__address list__item-img footer__item-list">г. Москва, ул. Петровская, д. 135<br> корпус 13.</li>
                     <li class="header__phone list__item-img footer__item-list">+7 916 123-45-67</li>
