--- a/app/index.html
+++ b/app/index.html
@@ -140,40 +140,58 @@
 					<h1 class="title__big section-title">Категории</h1>
 					<div class="grid">
 						<div class="grid__item main-categories__item">
-							<h4 class="main-categories__title">Вареные колбасы и ветчины</h4>
-							<img src="img/_src/categories-1.png" alt="">
+							<a href="catalog.html">
+								<h4 class="main-categories__title">Вареные колбасы и ветчины</h4>
+								<img src="img/_src/categories-1.png" alt="">
+							</a>
 						</div>
 						<div class="grid__item main-categories__item">
-							<h4 class="main-categories__title">Сосиски и сардельки</h4>
-							<img src="img/_src/categories-2.png" alt="">
+							<a href="catalog.html">
+								<h4 class="main-categories__title">Сосиски и сардельки</h4>
+								<img src="img/_src/categories-2.png" alt="">
+							</a>
 						</div>
 						<div class="grid__item main-categories__item">
-							<h4 class="main-categories__title">Варено-копченые и полукопченые колбасы</h4>
-							<img src="img/_src/categories-3.png" alt="">
+							<a href="catalog.html">
+								<h4 class="main-categories__title">Варено-копченые и полукопченые колбасы</h4>
+								<img src="img/_src/categories-3.png" alt="">
+							</a>
 						</div>
 						<div class="grid__item main-categories__item">
-							<h4 class="main-categories__title">Сырокопченые и сыровяленые колбасы</h4>
-							<img src="img/_src/categories-4.png" alt="">
+							<a href="catalog.html">
+								<h4 class="main-categories__title">Сырокопченые и сыровяленые колбасы</h4>
+								<img src="img/_src/categories-4.png" alt="">
+							</a>
 						</div>
 						<div class="grid__item main-categories__item">
-							<h4 class="main-categories__title">Заливные, ливер, субпродукты</h4>
-							<img src="img/_src/categories-5.png" alt="">
+							<a href="catalog.html">
+								<h4 class="main-categories__title">Заливные, ливер, субпродукты</h4>
+								<img src="img/_src/categories-5.png" alt="">
+							</a>
 						</div>
 						<div class="grid__item main-categories__item">
-							<h4 class="main-categories__title">Деликатесы и копчености</h4>
-							<img src="img/_src/categories-6.png" alt="">
+							<a href="catalog.html">
+								<h4 class="main-categories__title">Деликатесы и копчености</h4>
+								<img src="img/_src/categories-6.png" alt="">
+							</a>
 						</div>
 						<div class="grid__item main-categories__item">
-							<h4 class="main-categories__title">Шашлык</h4>
-							<img src="img/_src/categories-7.png" alt="">
+							<a href="catalog.html">
+								<h4 class="main-categories__title">Шашлык</h4>
+								<img src="img/_src/categories-7.png" alt="">
+							</a>
 						</div>
 						<div class="grid__item main-categories__item">
-							<h4 class="main-categories__title">Консервы</h4>
-							<img src="img/_src/categories-8.png" alt="">
+							<a href="catalog.html">
+								<h4 class="main-categories__title">Консервы</h4>
+								<img src="img/_src/categories-8.png" alt="">
+							</a>
 						</div>
 						<div class="grid__item main-categories__item">
-							<h4 class="main-categories__title">Полуфабрикаты замороженные</h4>
-							<img src="img/_src/categories-9.png" alt="">
+							<a href="catalog.html">
+								<h4 class="main-categories__title">Полуфабрикаты замороженные</h4>
+								<img src="img/_src/categories-9.png" alt="">
+							</a>
 						</div>
 					</div>
 				</div>
@@ -240,16 +258,16 @@
 		</main>
 
 		<div class="to-top">
-			<img src="img/_src/to-top.png" alt="">
+			<span class="to-top__arrow"></span>
 		</div>
 
 		<footer class="footer">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-2 col-sm-6 footer__img footer__item">
+					<div class="col-lg-2 col-sm-12 footer__img footer__item">
 						<img src="img/_src/logo.png" alt="">
 					</div>
-					<div class="col-lg-auto col-md-6 footer__menu footer__item to-hidden">
+					<div class="col-lg-auto col-md-4 d-sm-none d-lg-block footer__menu footer__item to-hidden">
 						<ul class="footer__ul">
 							<li><a href="index.html">Главная</a></li>
 							<li><a href="articles.html">Новости</a></li>
@@ -257,7 +275,7 @@
 							<li><a href="sertificats.html">Сертификаты</a></li>
 						</ul>
 					</div>
-					<div class="col-lg-auto col-md-6 footer__item to-hidden">
+					<div class="col-lg-auto col-md-4 d-sm-none d-lg-block footer__item to-hidden">
 						<ul class="footer__ul">
 							<li><a href="catalog.html">Вареные колбасы и ветчины</a></li>
 							<li><a href="catalog.html">Сосиски с сардельки</a></li>
@@ -266,7 +284,7 @@
 							<li><a href="catalog.html">Заливные, ливер, субпродукты</a></li>
 						</ul>
 					</div>
-					<div class="col-lg-auto col-md-6 footer__item to-hidden">
+					<div class="col-lg-auto col-md-4 d-sm-none d-lg-block footer__item to-hidden">
 						<ul class="footer__ul">
 							<li><a href="catalog.html">Деликатесы и копчености</a></li>
 							<li><a href="catalog.html">Шашлык</a></li>
@@ -274,7 +292,7 @@
 							<li><a href="catalog.html">Полуфабрикаты замороженные</a></li>
 						</ul>
 					</div>
-					<div class="col-xl-auto col-lg-12 col-sm-6 footer__item">
+					<div class="col-xl-auto col-md-12  footer__item">
 						<ul class="footer__ul">
 							<li class="header__address list__item-img footer__item-list">г. Москва, ул. Петровская, д. 135<br> корпус 13.</li>
 							<li class="header__phone list__item-img footer__item-list">+7 916 123-45-67</li>
