--- a/app/vacancy.html
+++ b/app/vacancy.html
@@ -132,17 +132,17 @@
             </section>
 		</main>
 
-    <div class="to-top">
-        <img src="img/_src/to-top.png" alt="">
-    </div>
+	<div class="to-top">
+		<span class="to-top__arrow"></span>
+	</div>
 
 	<footer class="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-2 col-sm-6 footer__img footer__item">
+				<div class="col-lg-2 col-sm-12 footer__img footer__item">
 					<img src="img/_src/logo.png" alt="">
 				</div>
-				<div class="col-lg-auto col-md-6 footer__menu footer__item to-hidden">
+				<div class="col-lg-auto col-md-4 d-sm-none d-lg-block footer__menu footer__item to-hidden">
 					<ul class="footer__ul">
 						<li><a href="index.html">Главная</a></li>
 						<li><a href="articles.html">Новости</a></li>
@@ -150,7 +150,7 @@
 						<li><a href="sertificats.html">Сертификаты</a></li>
 					</ul>
 				</div>
-				<div class="col-lg-auto col-md-6 footer__item to-hidden">
+				<div class="col-lg-auto col-md-4 d-sm-none d-lg-block footer__item to-hidden">
 					<ul class="footer__ul">
 						<li><a href="catalog.html">Вареные колбасы и ветчины</a></li>
 						<li><a href="catalog.html">Сосиски с сардельки</a></li>
@@ -159,7 +159,7 @@
 						<li><a href="catalog.html">Заливные, ливер, субпродукты</a></li>
 					</ul>
 				</div>
-				<div class="col-lg-auto col-md-6 footer__item to-hidden">
+				<div class="col-lg-auto col-md-4 d-sm-none d-lg-block footer__item to-hidden">
 					<ul class="footer__ul">
 						<li><a href="catalog.html">Деликатесы и копчености</a></li>
 						<li><a href="catalog.html">Шашлык</a></li>
@@ -167,7 +167,7 @@
 						<li><a href="catalog.html">Полуфабрикаты замороженные</a></li>
 					</ul>
 				</div>
-				<div class="col-xl-auto col-lg-12 col-sm-6 footer__item">
+				<div class="col-xl-auto col-md-12  footer__item">
 					<ul class="footer__ul">
 						<li class="header__address list__item-img footer__item-list">г. Москва, ул. Петровская, д. 135<br> корпус 13.</li>
 						<li class="header__phone list__item-img footer__item-list">+7 916 123-45-67</li>
